# filter_functions

./: .readthedocs.yml  .travis.yml  .zenodo.json  CITATION.cff  CONTRIBUTING.md  README.md  coverage.ini  environment.yml  pycodestyle.cfg  pyproject.toml  pytest.ini  setup.cfg  setup.py
.github/workflows/: main.yml  tests.yml
doc/: Makefile  make.bat  requirements.txt
doc/source/: api.rst  conf.py  filter_functions.rst  index.rst
doc/source/_static/: qft.tex  qft_HR2R3_boxed.tex  qft_HR2R3_boxed_separately.tex  qft_with_echo.tex
doc/source/examples/: advanced_concatenation.ipynb  calculating_error_transfer_matrices.ipynb  calculating_quantum_processes.ipynb  calculating_quantum_processes_BACKUP_1471.ipynb  calculating_quantum_processes_LOCAL_1471.ipynb  examples.rst  extending_pulses.ipynb  getting_started.ipynb  matplotlibrc  periodic_driving.ipynb  quantum_fourier_transform.ipynb  qutip_integration.ipynb
doc/source/examples/.ipynb_checkpoints/: advanced_concatenation-checkpoint.ipynb  getting_started-checkpoint.ipynb  periodic_driving-checkpoint.ipynb  qutip_integration-checkpoint.ipynb
examples/: qft.py  randomized_benchmarking.py
examples/data/: CNOT.mat  X2ID.mat  Y2ID.mat
filter_functions/: __init__.py  analytic.py  basis.py  gradient.py  gradient_.py  numeric.py  plotting.py  pulse_sequence.py  superoperator.py  types.py  util.py
tests/: __init__.py  gradient_testutil.py  test_basis.py  test_core.py  test_extras.py  test_gradient.py  test_plotting.py  test_precision.py  test_sequencing.py  test_superoperator.py  test_util.py  testutil.py
