[build-system]
requires = [
    "setuptools >= 42",
    "versioningit",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "filter_functions"
description = "Package for efficient calculation of generalized filter functions"
readme = "README.md"
requires_python = ">= 3.7"
license = {file = "LICENSE"}
authors = [
    {name = "Quantum Technology Group, RWTH Aachen University"},
    {name = "Tobias Hangleiter", email = "tobias.hangleiter@rwth-aachen.de"},
]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy",
    "scipy",
    "opt_einsum",
    "sparse",
    "tqdm",
]
dynamic = [
    "version"
]

[project.optional-dependencies]
plotting = ["matplotlib"]
bloch_sphere_visualization = ["qutip", "matplotlib"]
fancy_progressbar = ["ipynbname", "jupyter"]
doc = ["jupyter", "nbsphinx", "numpydoc", "sphinx", "sphinx_rtd_theme"]
tests = ["pytest >= 4.6", "pytest-cov", "codecov"]
all = [
    # Combined dependency resolution would be nice!
    # https://discuss.python.org/t/pyproject-toml-optional-dependencies-redundancy-aka-dry-extras/8428
    "matplotlib",
    "qutip",
    "ipynbname",
    "jupyter",
    "nbsphinx",
    "numpydoc",
    "sphinx",
    "sphinx_rtd_theme",
    "pytest >= 4.6",
    "pytest-cov",
    "codecov",
]

[project.urls]
Source = "https://github.com/qutech/filter_functions"
Documentation = "https://filter-functions.readthedocs.io/en/latest/"
Homepage = "https://www.quantuminfo.physik.rwth-aachen.de/cms/Quantuminfo/Forschung/Quantum-Technology-Group/~zcsx/code/lidx/1/"

# Dynamically obtains the version from git tags
[tool.versioningit]

[tool.pytest.ini_options]
minversion = "4.6"
addopts = "-ra --verbose --cov=filter_functions --cov-report=xml"
testpaths = [
    "tests"
]

[tool.coverage.run]
branch = true

[tool.coverage.report]
omit = ["tests/*", "*/__init__.py"]

[tool.pylint.'MESSAGES CONTROL']
disable = "E123,E226,W504"

[tool.pylint.FORMAT]
# Maximum number of characters on a single line.
max-line-length = 99
